crates/cash-parser/src/snapshots/cash_parser__tokenizer__tests__tokenize_line_continuation.snap
---
source: cash-parser/src/tokenizer.rs
expression: "test_tokenizer(r\"a\\\nbc\")?"
---
TokenizerResult(
  input: "a\\\nbc",
  result: [
    Word("abc", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 5,
        line: 2,
        column: 3,
      ),
    )),
  ],
)
