crates/cash-parser/src/snapshots/cash_parser__tokenizer__tests__tokenize_special_parameters-3.snap
---
source: cash-parser/src/tokenizer.rs
expression: "test_tokenizer(\"$!\")?"
---
TokenizerResult(
  input: "$!",
  result: [
    Word("$!", SourceSpan(
      start: SourcePosition(
        index: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        index: 2,
        line: 1,
        column: 3,
      ),
    )),
  ],
)
